apps/examples/p3-forward-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p3-whoami
  namespace: scrap-examples
spec:
  selector:
    app: p3-whoami
  ports:
    - name: http
      port: 80
      targetPort: http
